Increase form spacing and fix favicon

--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -2978,7 +2978,7 @@ input[type="month"].input-lg {
 }
 
 .form-group {
-    margin-bottom: 15px
+    margin-bottom: 30px
 }
 
 .radio,
