--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -664,6 +664,10 @@ section#contact .section-heading {
     color: #fff;
 }
 
+div.form-group.sub-question {
+    padding-left: 20px;
+}
+
 section#contact .form-group {
     margin-bottom: 25px;
 }
